--- a/style.css
+++ b/style.css
@@ -2,25 +2,48 @@ body {
   font-family: Helvetica, "Times New Roman", sans-serif;
   margin: 0;
   min-height: 10vh;
-  display: flex;
-  flex-direction: column;
+  min-width: 50vh;
 }
 
 .header {
-    display: flex;
-}
-
-.header img {
-    height: 64px;
-    width: 64px;
+  min-width: max-content;
+  padding: 16px 256px;
+  background-color: rgb(31, 15, 42);
+  font-size: 28px;
+  font-weight: 700;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .header ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0 0 0 32px;
+  min-width: max-content;
 }
 
 .header li {
-    display: inline;
+  display: inline;
+}
+
+.header a {
+    color: rgb(116, 117, 126);
+    font-size: 20px;
+    text-decoration: none;
+}
+
+.header-logo {
+  display: flex;
+  align-items: center;
+}
+
+.header-logo span {
+    color: rgb(180, 184, 234);
+    padding: 0 0 0 16px;
+}
+
+.header-logo img {
+  height: 64px;
+  width: 64px;
 }
