--- a/style.css
+++ b/style.css
@@ -7,12 +7,12 @@ body {
 
 .header {
   min-width: max-content;
-  padding: 16px 256px;
+  padding: 16px 128px;
   background-color: rgb(31, 15, 42);
   font-size: 28px;
   font-weight: 700;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 
