--- a/style.css
+++ b/style.css
@@ -121,3 +121,22 @@ body {
   border: 6px solid rgb(142, 69, 162);
   border-radius: 8px;
 }
+
+.quote {
+  background-color: rgb(208, 208, 214);
+  color:rgb(55, 55, 74);
+  padding: 204px 306px;
+  font-size: 32px;
+  font-weight: 400;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 28px;
+}
+
+.quote-author {
+  color:rgb(25, 25, 33);
+  font-size: 32px;
+  font-weight: 700;
+  align-self: flex-end;
+}
