Extend footer styles

--- a/style.css
+++ b/style.css
@@ -174,3 +174,16 @@ body {
   font-size: 14px;
   font-weight: 450;
 }
+
+.footer {
+  min-width: max-content;
+  padding: 16px 128px;
+  background-color: rgb(29, 16, 36);
+  color: rgb(255, 255, 255);
+  font-size: 14px;
+  font-weight: 450;
+  padding: 36px 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
